Finition de la page d'accueil et de la page d'article détaillé

--- a/Style/style.css
+++ b/Style/style.css
@@ -7,14 +7,90 @@ padding-top:5em;
 text-align:center;
 }
 
+.Catalogue{
+padding-top:5em;
+}
+
+.Image{
+padding-left:6em;
+float:left;
+padding-top:9em;
+}
+
+h2{
+color:brown;
+}
+
+.Panier{
+margin-left:28em;
+width:120px;
+background-color:red;
+color:white;
+}
+
+.Détail{
+padding-top:9em;
+width:320px;
+float:center;
+padding-left:30em;
+}
+
+@media(max-width:640px){
+max-width:640px;
+img, table, td, blockquote, code, pre, textarea, input, iframe, object, embed, video {
+    max-width: 100%;
+}
+overflow:hidden;
+}
+
+div.Commentaire{
+float:left;
+padding-top:2em;
+padding-right:30em;
+padding-left:3em;
+}
+
+h5{
+font-size:20pt;
+text-decoration:underline;
+}
+
+textarea{
+width:40em;
+height:20em;
+}
+
+.QSN{
+padding-top:5em;
+}
+
+.Description{
+padding-top:3em;
+padding-left:3em;
+}
+
+.com{
+padding-top:5em;
+font-size:30pt;
+}
+
+h3{
+font-size:16pt;
+}
+
+h4{
+font-size:16pt;
+text-decoration:underline;
+}
+
 div.Recherche{
 float:right;
 padding-right:1em;
 }
 
 td{
-padding-right:2em;
-padding-left:2em;
+padding-right:1em;
+padding-left:1em;
 font-size:15pt;
 }
 
