--- a/Style/style.css
+++ b/Style/style.css
@@ -3,22 +3,22 @@ background-color:silver;
 }
 
 .contenu{
-padding-top:5em;
+margin-top:8em;
 text-align:center;
 }
 
-.Catalogue{
-padding-top:5em;
-}
 
 .Image{
-padding-left:6em;
+margin-left:6em;
 float:left;
-padding-top:9em;
 }
 
 h2{
 color:brown;
+}
+
+.présentation{
+font-size:16pt;
 }
 
 .Panier{
@@ -28,11 +28,95 @@ background-color:red;
 color:white;
 }
 
+.Paiement{
+font-size:20pt;
+margin-top:2em;
+border:0.1em solid grey;
+padding:1em 1em 1em 1em;
+border-radius:1em 1em 1em 1em;
+width:500px;
+}
+.titre{
+text-decoration:underline;
+}
+
+.Ad{
+font-size:20pt;
+text-decoration:underline;
+}
+
+.CB{
+margin-top:1em;
+margin-left:2em;
+font-size:16pt;
+width:500px;
+text-decoration:none;
+}
+
+.Livraison{
+width:500px;
+border:0.15em solid grey;
+margin-top:3em;
+border-radius:1em 1em 1em 1em;
+padding-left:2em;
+padding:2em 2em 2em 2em;
+}
+
+.Coordonnées{
+margin-top:3em;
+font-size:30pt;
+text-decoration:underline;
+}
+
+.Total{
+text-align:center;
+font-weight:bold;
+font-size:20pt;
+}
+
+.Commande{
+margin-top:2em;
+margin-left:29em;
+}
+
 .Détail{
-padding-top:9em;
+margin-top:9em;
 width:320px;
 float:center;
-padding-left:30em;
+margin-left:30em;
+border:0.15em dashed grey;
+padding:1em 1em 1em 1em;
+border-radius:1em 1em 1em 1em;
+}
+
+.envoyer{
+margin-left:35em;
+margin-top:2em;
+padding:1em 1em 1em 1em;
+border-radius:1em 1em 1em 1em;
+}
+
+s{
+color:red;
+}
+
+.Prix{
+font-size:20pt;
+}
+
+
+.NomA:hover{
+text-decoration:underline;
+}
+
+.NomA{
+color:brown;
+font-weight:bold;
+font-size:20pt;
+}
+
+.Article{
+padding-top:8em;
 }
 
 @media(max-width:640px){
@@ -44,10 +128,11 @@ overflow:hidden;
 }
 
 div.Commentaire{
-float:left;
-padding-top:2em;
-padding-right:30em;
-padding-left:3em;
+border:0.15em solid grey;
+margin-left:3em;
+width:600px;
+padding:1em 1em 1em 1em;
+border-radius:1em 1em 1em 1em;
 }
 
 h5{
@@ -65,8 +150,12 @@ padding-top:5em;
 }
 
 .Description{
-padding-top:3em;
-padding-left:3em;
+margin-top:3em;
+margin-left:3em;
+border:0.15em double grey;
+border-radius:1em 1em 1em 1em;
+width:500px;
+padding:1em 1em 1em 1em;
 }
 
 .com{
@@ -91,7 +180,7 @@ padding-right:1em;
 td{
 padding-right:1em;
 padding-left:1em;
-font-size:15pt;
+font-size:16pt;
 }
 
 
@@ -107,12 +196,27 @@ float:center;
 font-size:40pt;
 }
 
-td:hover{
+.Barre td:hover{
 background-color:grey;
+}
+.Logo{
+float:left;	
+}
+
+.Article td{
+border:0.1em dashed grey;
+border-radius:1em 1em 1em 1em;
+}
+
+.ESP{
+color:brown;
+}
+
+.ESP:hover{
+text-decoration:underline;
 }
 
 header{
-border-bottom:1em solid black;
 background-color:black;	
 color:white;
 padding-top:1em;
